--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewpoint" content="width=device-width" initial-scale="1">
+        <meta name="viewport" content="width=device-width" initial-scale="1.0">
         <title>Sehee Jang | Holy Grail Layout Example</title>
         <meta name="description" content="A common layout example on the web called the 'holy grail' layout">
         <meta name="author" content="Sehee J">
