--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Sehee Jang | WDD130">
+        <meta name="author" content="Sehee Jang">
         <title>Sehee Jang | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -22,6 +25,11 @@
                 I am so excited to get this semseter started!
             </p>
         </main>
+        <aside>
+            <h2>South Korea</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Flag_of_South_Korea.png" alt="The national flag of the Republic of Korea">
+            <p>In the 21st century, South Korea has been renowned for its globally influential pop culture, particularly in music (K-pop), TV dramas (K-dramas) and cinema, a phenomenon referred to as the Korean Wave.</p>
+        </aside>
         <footer>
            <p>©2023 | Sehee Jang | South Korea</p>
             
