--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
         <title>Rafting Site Plan | Sehee Jang</title>
         <meta name="description" content="The rafting site plan including the site purpose, the target audience, branding information, and a style guide for the course website project. ">
         <meta name="author" content="Sehee Jang">
-        <link rel="stylesheet" href="/styles/site-plan-rafting.css">
+        <link rel="stylesheet" href="wwr\styles\site-plan-rafting.css">
     </head>
     <body>
         <header>
