--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -60,7 +60,7 @@
 
             <!--Logo-->
             <h3>Website logo</h3>
-            <img src="images\rafting-logo.png" alt="logo">
+            <img src="wwr\site-plan-rafting.html" alt="logo">
             
             <!--Style Guide-->
             <h2>Style Guide</h2>
