--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="author" content="Sehee Jang">
         <title>Sehee Jang | WDD 130</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
     </head>
     <body>
         <header>
@@ -14,18 +16,27 @@
                 <a href="#">Home</a>
                 <a href="wwr/">White Water Rafting Wetsite</a>
                 <a href="wwr/site-plan-rafting.html">Wite Water Rafting Siteplan</a>
+                <a href="https://linkedin.com/in/seheejang">LinkedIn</a>
+                <a href="https://facebook.com">Facebook</a>
             </nav>
         </header>
         <main>
             <h1>Sehee Jang | WDD130</h1>
             <img src="images/profile.jpg" alt="Sehee Jang" width="200">
             <p>
-                Hello everyone, my name is Sehee.
-                I am from South Korea, and I finished my AS degree in Ensign College.
+                Hello everyone, my name is Sehee. <br />
+                I am from South Korea, and I finished my AS degree in Ensign College. <br />
+                I mostly like every water sports but freediving and swimming are my favorite. But I spend most of my time at the gym when I have free time, and I also enjoy cooking and driving.<br />
+                I used to work as a graphic designer in Korea and New York but I wanted to continue studying to finish my BS degree. <br />
                 I am so excited to get this semseter started!
             </p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng">Provo City Center Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/seoul-korea-temple?lang=eng">Seoul Korea Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>South Korea</h2>
             <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Flag_of_South_Korea.png" alt="The national flag of the Republic of Korea">
             <p>In the 21st century, South Korea has been renowned for its globally influential pop culture, particularly in music (K-pop), TV dramas (K-dramas) and cinema, a phenomenon referred to as the Korean Wave.</p>
@@ -35,4 +46,5 @@
             
         </footer>
     </body>
+    <!-- Last Modified: Sep 18, 2023-->
 </html>
