--- a/week04/grid.html
+++ b/week04/grid.html
@@ -1,12 +1,86 @@
 <style>
-#garden {
+  .grid_container {
+    background-color: #8cc1ec;
+    padding: 10px;
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    /*
+      These bottom two code will do the same thing.
+      grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+
+  .grid_item {
+    background-color: #dcebf8;
+    border: 1px solid #333;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .grid_item10 {
+    grid-column: 1/4;
+  }
+
+  .home_grid {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 40px;
+  }
+
+  .path_video {
+    grid-column: 1/3;
+    /* 
+    These two codes are the same with "grid-column: 1/3"
+    grid-column-start: 1;
+    grid-column-end: 3; */
+    grid-row: 1/2;
+  }
+
+  h1 {
+    background-color: aquamarine !important;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    z-index: 1;
+    align-self: center;
   }
   
+  aside {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
 
 </style>
 
-grid-column-start: 3;
-grid-column-end : 3;
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <div class="grid_container">
+      <div class="grid_item">1</div>
+      <div class="grid_item">2</div>
+      <div class="grid_item">3</div>
+      <div class="grid_item">4</div>
+      <div class="grid_item">5</div>
+      <div class="grid_item">6</div>
+      <div class="grid_item">7</div>
+      <div class="grid_item">8</div>
+      <div class="grid_item">9</div>
+      <div class="grid_item grid_item10">10</div>
+    </div>
+
+    <div class="home_grid">
+      <div class="path_video grid_item"></div>
+      <h1 class="path_title grid_item">Path Title</h1>
+      <aside class="visit_us grid_item">
+        <div class="image grid_item"></div>
+        <h2>Visit Us</h2>
+        <p>abcdefg</p>
+      </aside>
+      <div class="icon1 grid_item">Icon 1</div>
+      <div class="icon2 grid_item">Icon 2</div>
+    </div>
+  </body>
+</html>
