--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,7 +6,7 @@
         <title>Rafting Site Plan | Sehee Jang</title>
         <meta name="description" content="The rafting site plan including the site purpose, the target audience, branding information, and a style guide for the course website project. ">
         <meta name="author" content="Sehee Jang">
-        <link rel="stylesheet" href="styles\site-plan-rafting.css">
+        <link rel="stylesheet" href="styles/site-plan-rafting.css">
     </head>
     <body>
         <header>
@@ -24,36 +24,24 @@
             <!--Audience-->
             <h3>Audience</h3>
             <p>
-                <ul>
-                    <li>
-                        Target audience is adventure enthusiasts seeking thriing outdoor experiences in the natural environment.
-                        <ul>
-                            <li>Age: Primarily between 18 and 45 years old</li>
-                            <li>Financial Situation: Middle class, with disposable income for leisure activities</li>
-                            <li>Interests: Outdoor leisure, nature exploation and physical fitness.</li>  
-                        </ul>
-                    </li>
-
-                    <li>
-                        What They Want
-                        <ul>
-                            <li>They want to have an exciting but safe lifting experience.</li>
-                            <li>They look for detailed information about trusted rafting packages and safety equipment.</li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        What They expect to find on the website?
-                        <ul>
-                            <li>Clear descriptions of a variety rafting packages</li>
-                            <li>Price and booking information &#40;ex.group discounts&#41;</li>
-                            <li>Detailed safety guide</li>
-                            <li>High-quality photos and videos</li>
-                            <li>Other customers's reviews</li>
-                        </ul>
-                    </li>
-                </ul>
+                <span style="font-weight: bold;">Target audience is adventure enthusiasts seeking thriing outdoor experiences in the natural environment.<br></span>
+                Age: Primarily between 18 and 45 years old<br>
+                Financial Situation: Middle class, with disposable income for leisure activities<br>
+                Interests: Outdoor leisure, nature exploation and physical fitness.  
+            </p> 
+            <p>
+                <span style="font-weight: bold;">What They Want<br></span>
+                They want to have an exciting but safe lifting experience.<br>
+                They look for detailed information about trusted rafting packages and safety equipment.
             </p>
+            <p>
+                <span style="font-weight: bold;">What They expect to find on the website?<br></span>
+                Clear descriptions of a variety rafting packages<br>
+                Price and booking information &#40;ex.group discounts&#41;<br>
+                Detailed safety guide<br>
+                High-quality photos and videos<br>
+                Other customers's reviews
+            </p>       
 
             <!--Branding-->
             <h2>Branding</h2>
