--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -48,7 +48,7 @@
 
             <!--Logo-->
             <h3>Website logo</h3>
-            <img src="images\rafting-logo.png" alt="logo">
+            <img src="images/rafting-logo.png" alt="logo">
             
             <!--Style Guide-->
             <h2>Style Guide</h2>
@@ -56,13 +56,11 @@
             <!--Color Pallete-->
             <h3>Color Pallete</h3>
             <p>
-                <ul>
-                    <li>primary-color: #79Beee</li>
-                    <li>secondary-color: #198BCA</li>
-                    <li>accent1-color: #00569B</li>
-                    <li>accent2-color: #4CAF50</li>
-                    <a href="https://coolors.co/79beee-198bca-00569b-4caf50" target="_blank"><li>Palette URL</li></a>               
-                </ul>
+                primary-color: #79Beee<br>
+                secondary-color: #198BCA<br>
+                accent1-color: #00569B<br>
+                accent2-color: #4CAF50<br>
+                <a href="https://coolors.co/79beee-198bca-00569b-4caf50" target="_blank">Palette URL</a>
             </p>
             
             <!--Typography-->
