--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -43,7 +43,7 @@
                         <input type="checkbox" id="pet" name="pet">
                     </div>
                     
-                    <div class="form-item column1">
+                    <div class="form-item">
                         <label for="feedback">List the places you have lived:</label>
                         <textarea name="feedback" id="feedback" rows="10" placeholder="Stillwater Florida, Amsterdam Netherlands, Tibuktu Mali"></textarea>    
                     </div>
