--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
         <title>WDD 130 | HTML Form - Quiz Form</title>
         <meta name="description" content="week 5 quiz form">
         <meta name="author" content="Sehee Jang">
-        <link rel="stylesheet" href="style/quiz.css">
+        <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
         <header>
