--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>WDD 130 | HTML Form - Quiz Form</title>
-        <meta name="description" content="week 5 quiz form">
+        <meta name="description" content="Basic HTML & CSS Quiz">
         <meta name="author" content="Sehee Jang">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
