--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                     I am so excited to get this semseter started!
                 </p>
                 <ul class="box indent">
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng">Provo City Center Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/seoul-korea-temple?lang=eng">Seoul Korea Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng" target="_blank">Provo City Center Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/seoul-korea-temple?lang=eng" target="_blank">Seoul Korea Temple</a></li>
                 </ul>
             </main>
             <aside class="box">
