--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,48 +28,57 @@
                         <h1>DRY OAR RAFTING</h1>
                         <ul>
                             <li></li>
-                            <li><span>Address:</span> Moab, UT 84532, United States</li>
-                            <li><span>Phone Number:</span> 801-100-1000</li>
-                            <li><span>Email:</span>dryoar@gmail.com</li>
+                            <li><span class="bold">Address:</span>&nbsp&nbsp Moab, UT 84532, United States</li>
+                            <li><span class="bold">Phone Number:</span>&nbsp&nbsp 801-100-1000</li>
+                            <li><span class="bold">Email:</span>&nbsp&nbsp dryoar@gmail.com</li>
                         </ul>
                     </div>
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24233.039340941297!2d-109.5532854205636!3d38.60539937695241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1695877996381!5m2!1sen!2skr" width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24233.039340941297!2d-109.5532854205636!3d38.60539937695241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1695877996381!5m2!1sen!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </section>
 
                 <!--Employees-->
-                <section class="employees">
-                    <figure>
-                        <img src="images/employee01.png" alt="Employee's profile picture">
-                        <figcaption>Customer Care Extraordinaire - [Ethan Mitchell]</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/employee02.png" alt="Employee's profile picture">
-                        <figcaption>Adventure Guru - [Malik Johnson]</figcaption>
-                    </figure>
-                    <figure>
-                        <img src="images/employee03.png" alt="Employee's profile picture">
-                        <figcaption>Safety Specialist - [Sarah Turner]</figcaption>
-                    </figure>
+                <section class="employees_container">
+                    <div class="employees">
+                        <figure>
+                            <img src="images/employee01.png" alt="Employee's profile picture">
+                            <figcaption>
+                                <span class="bold">Customer Care Extraordinaire</span>
+                                <p>Ethan Mitchell</p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/employee02.png" alt="Employee's profile picture">
+                            <figcaption>
+                                <span class="bold">Adventure Guru</span>
+                                <p>Malik Johnson</p>
+                            </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="images/employee03.png" alt="Employee's profile picture">
+                            <figcaption>
+                                <span class="bold">Safety Specialist</span>
+                                <p>Sarah Turner</p>
+                            </figcaption>
+                        </figure>
+                    </div>
                 </section>
 
                 <!--Form-->
-                <section class="adventure">
-                    <h2 class="adventure_title subtitle">Adventure Awaits You!</h2>
+                <section class="form_container">
+                    <h1>Adventure Awaits You!</h1>
                     <form>
                         <fieldset>
                             <legend>Contact Information</legend>
                             <div class="form-item column2">
-                                <label for="fullname">Full Name:</label>
-                                <input type="text" id="fullname" name="fullname">
+                                <input type="text" id="fullname" name="fullname" placeholder="Full Name">
                             </div>
                             <div class="form-item column2">
-                                <label for="useremail">Email:</label>
-                                <input type="email" id="useremail" name="useremail">
+                                <input type="email" id="useremail" name="useremail" placeholder="Email">
                             </div>
-                            
                         </fieldset>
+
                         <fieldset>
                             <legend>Questions</legend>
                             <div class="form-item column1">
@@ -96,7 +105,7 @@
                             </div>
                             
                         </fieldset>
-                        <button type="submit">Submit Poll</button>
+                        <button type="submit">Submit</button>
                     </form>
                 </section>
             </div>
