--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <title>Contact Us</title>
+        <title>Dry Oar Rafting | Contact Us</title>
         <meta name="description" content="Contact Us">
         <meta name="author" content="Sehee Jang">
         <link rel="stylesheet" href="styles/rafting.css">
