--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,21 +25,21 @@
                 <!--Company Info-->
                 <section class="info_container">
                     <div class="info">
-                        <h1>DRY OAR RAFTING</h1>
+                        <h2>DRY OAR RAFTING</h2>
                         <ul>
                             <li></li>
-                            <li><span class="bold">Address:</span>&nbsp&nbsp Moab, UT 84532, United States</li>
-                            <li><span class="bold">Phone Number:</span>&nbsp&nbsp 801-100-1000</li>
-                            <li><span class="bold">Email:</span>&nbsp&nbsp dryoar@gmail.com</li>
+                            <li><span class="bold">Address:</span> Moab, UT 84532, United States</li>
+                            <li><span class="bold">Phone Number:</span> 801-100-1000</li>
+                            <li><span class="bold">Email:</span> dryoar@gmail.com</li>
                         </ul>
                     </div>
                     <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24233.039340941297!2d-109.5532854205636!3d38.60539937695241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1695877996381!5m2!1sen!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24233.039340941297!2d-109.5532854205636!3d38.60539937695241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1695877996381!5m2!1sen!2skr" width="460" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </section>
 
                 <!--Employees-->
-                <section class="employees_container">
+                <div class="employees_container">
                     <div class="employees">
                         <figure>
                             <img src="images/employee01.png" alt="Employee's profile picture">
@@ -63,11 +63,11 @@
                             </figcaption>
                         </figure>
                     </div>
-                </section>
+                </div>
 
                 <!--Form-->
                 <section class="form_container">
-                    <h1>Hit Us Up</h1>
+                    <h2>Hit Us Up</h2>
                     <div class="line"></div>
                     <form>
                         <fieldset>
