--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
                 <!--Mission-->
                 <section class="mission">
                     <div class="bg">
-                        <img src="images/rafting-bg.jpg" alt="rafting background image">
+                        <img src="images/rafting-bg01.jpg" alt="rafting background image">
                     </div>
                     <h1>Dry Oar Rafting</h1>
                     <article>
