--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -22,12 +22,12 @@
             <!--Mission-->
             <section class="banner_container">
                 <h1>White Water Rafting</h1>
-                <div class="color_overlay"></div>
-                <div class="bg"><img src="images/rafting-bg02.jpg" alt="rafting background image"></div>
+                <!-- <div class="color_overlay"></div> -->
+                <img src="images/rafting-bg02.jpg" alt="rafting background image">
             </section>
 
             <section class="trip-description">
-                <h2>Main Featured Trips</h2>
+                <h2 class="sub_title">Main Featured Trips</h2>
                 <div class="trip">
                     <img src="images/trip01.jpg" alt="Trip 1">
                     <h2>1 Day Grand Canyon Rafting Trip</h2>
