--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -128,7 +128,7 @@
         </main>
         
         <footer class="footer_container">
-            <p>©2023 | Rafting Site Document | Sehee Jang</p> 
+            <p>©2023 | Dry Oar Rafting Co. | Sehee Jang</p>
             <nav class="socialmedia">
                 <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://twitter.com" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
