--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -12,10 +12,12 @@
         <header class="header_container">
             <img src="images/rafting-logo.png" alt="logo" width="150">
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html">Contact</a>
+                <ul class="navigation">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul> 
             </nav>
         </header>
         <main>
