--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -119,6 +119,7 @@
                 <a href="https://facebook.com" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://twitter.com" target="_blank"><img src="images/twitter.png" alt="Twitter"></a>
                 <a href="https://instagram.com" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+                <a href="images/wireframe_contact.jpg" target="_blank" class="wireframe" style="display:flex; font-size: 12px;">Wireframe Image</a>
             </nav>
         </footer>
     </body>
