--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,13 +27,15 @@
                 <!--Company Info-->
                 <section class="info_container">
                     <div class="info">
-                        <h2>DRY OAR RAFTING</h2>
-                        <ul>
-                            <li></li>
-                            <li><span class="bold">Address:</span> Moab, UT 84532, United States</li>
-                            <li><span class="bold">Phone Number:</span> 801-100-1000</li>
-                            <li><span class="bold">Email:</span> dryoar@gmail.com</li>
-                        </ul>
+                        <div class="text">
+                            <h2>DRY OAR RAFTING</h2>
+                            <ul>
+                                <li></li>
+                                <li><span class="bold">Address:</span> Moab, UT 84532, United States</li>
+                                <li><span class="bold">Phone Number:</span> 801-100-1000</li>
+                                <li><span class="bold">Email:</span> dryoar@gmail.com</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24233.039340941297!2d-109.5532854205636!3d38.60539937695241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skr!4v1695877996381!5m2!1sen!2skr" width="460" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
