--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -77,9 +77,11 @@
                         <fieldset>
                             <legend>Contact Information</legend>
                             <div class="contact_info">
+                                <label for="fullname">Full Name:</label>
                                 <input type="text" id="fullname" name="fullname" placeholder="Full Name">
                             </div>
                             <div class="contact_info">
+                                <label for="useremail">Email:</label>
                                 <input type="email" id="useremail" name="useremail" placeholder="Email">
                             </div>
                         </fieldset>
