--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,8 +30,12 @@
                 <h2>Subscribe to Our Newsletter</h2>
                 <p>Stay updated with the latest adventure news and offers.</p>
                 <form action="#" method="post">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="Your Email" required>
+                    <label for="fullname">Full Name</label>
+                    <input type="text"  id="fullname" name="name" placeholder="Your Name" required>
+
+                    <label for="email">Email</label>
+                    <input type="email"  id="email"  name="email" placeholder="Your Email" required>
+
                     <button type="submit">Subscribe</button>
                 </form>
             </section>
